// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Getting chart data should create series from single measure 1`] = `
Object {
  "categories": Array [
    undefined,
  ],
  "series": Array [
    Object {
      "data": Array [
        Object {
          "drillContext": Array [
            Object {
              "id": "a8908b3c92b6743b1fc71c8b113533bc",
              "identifier": "",
              "uri": "",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 118,
        },
      ],
      "isDrillable": false,
      "legendIndex": 0,
      "name": "# of Accounts",
    },
  ],
}
`;

exports[`Getting chart data should create series from single measure and attribute 1`] = `
Object {
  "categories": Array [
    "",
    "Churned",
    "N/A",
    "OK",
    "Potentially Churned / Salesforce Issues",
  ],
  "series": Array [
    Object {
      "data": Array [
        Object {
          "drillContext": Array [
            Object {
              "id": "1",
              "identifier": "label.projectgroup.stage",
              "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
              "value": "",
            },
            Object {
              "id": "a8908b3c92b6743b1fc71c8b113533bc",
              "identifier": "",
              "uri": "",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 1,
        },
        Object {
          "drillContext": Array [
            Object {
              "id": "321199",
              "identifier": "label.projectgroup.stage",
              "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
              "value": "Churned",
            },
            Object {
              "id": "a8908b3c92b6743b1fc71c8b113533bc",
              "identifier": "",
              "uri": "",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 25,
        },
        Object {
          "drillContext": Array [
            Object {
              "id": "2288",
              "identifier": "label.projectgroup.stage",
              "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
              "value": "N/A",
            },
            Object {
              "id": "a8908b3c92b6743b1fc71c8b113533bc",
              "identifier": "",
              "uri": "",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 1,
        },
        Object {
          "drillContext": Array [
            Object {
              "id": "321198",
              "identifier": "label.projectgroup.stage",
              "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
              "value": "OK",
            },
            Object {
              "id": "a8908b3c92b6743b1fc71c8b113533bc",
              "identifier": "",
              "uri": "",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 153,
        },
        Object {
          "drillContext": Array [
            Object {
              "id": "321216",
              "identifier": "label.projectgroup.stage",
              "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
              "value": "Potentially Churned / Salesforce Issues",
            },
            Object {
              "id": "a8908b3c92b6743b1fc71c8b113533bc",
              "identifier": "",
              "uri": "",
              "value": "# of Accounts",
            },
          ],
          "drilldown": false,
          "format": "#,##0",
          "marker": Object {
            "enabled": true,
          },
          "y": 27,
        },
      ],
      "isDrillable": false,
      "legendIndex": 0,
      "name": "# of Accounts",
    },
  ],
}
`;
